# ppkdmeans3

./: .cloud.cpp.swp  .gitignore  .read_data.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a.out  cloud.cpp  cloud.h  cmake_install.cmake  comparator.cpp  comparator.h  comparison_circuit.cpp  data.csv  data_bp.csv  del.sh  func.cpp  func.h  log.txt  my_tools.cpp  my_tools.h  old_garbage.cpp  pp3.cbp  pp3.cpp  pseudo-code.txt  read_data.cpp  test.ipynb  test_sc  test_sc.cbp  test_sc.cpp  tools.cpp  tools.h
.cache/clangd/index/: cloud.cpp.33AD1285A46116B7.idx  cloud.h.5BADBA4D6397DCF8.idx  comparator.cpp.5A8038C85AA186E5.idx  comparator.h.5055D9362F2C8857.idx  func.cpp.5B54E7DD9CFC5EB6.idx  func.h.89F57CC916B8EDDD.idx  my_tools.cpp.C0E5E5351976A721.idx  my_tools.h.2D1814B8A75EE600.idx  pp3.cpp.D47809E59F5B38D9.idx  tools.cpp.7664A086EEDD2749.idx  tools.h.4BADD5371F2FE961.idx
HElib/examples/: Makefile  cmake_install.cmake
HElib/examples/BGV_binary_arithmetic/: BGV_binary_arithmetic.cpp  Makefile  cmake_install.cmake
HElib/examples/BGV_country_db_lookup/: Makefile  cmake_install.cmake
HElib/examples/BGV_packed_arithmetic/: BGV_packed_arithmetic.cpp  Makefile  cmake_install.cmake
HElib/examples/tutorial/: Makefile  cmake_install.cmake
cmp_ot/: CMakeLists.txt  main.cpp
cmp_ot/install/lib/cmake/SCI/: SCIConfig.cmake  SCITargets-noconfig.cmake  SCITargets.cmake
